interfaces/samples/int_types_assigment.go
i = j // error: cannot use j (type MyInt) as type int in assignment
i = int(j)
